fix: increase max-height to 80dvh for improved content visibility in _cv.scss

--- a/src/styles/partials/_cv.scss
+++ b/src/styles/partials/_cv.scss
@@ -12,7 +12,7 @@
   overflow-y: auto;
   flex-direction: column;
   justify-content: space-between;
-  max-height: 60dvh;
+  max-height: 80dvh;
   padding-bottom: 60px; /* Espace pour le footer */
   -webkit-overflow-scrolling: touch;
 
